dropout is no longer a hp we search for

--- a/config/base_config.yml
+++ b/config/base_config.yml
@@ -6,7 +6,7 @@ SEED: 1234
 TRAIN:
   BATCH_SIZE: 32
   DATASET_SPLIT: 'train'
-  DROPOUT: [0.0, 0.2]  #
+  DROPOUT: 0.25
   EARLY_STOPPING_PATIENCE: 25
   EARLY_STOPPING_PATIENCE: 5
   L2: [0.0001, 0.001]  #
